Reinitialize bidi keyboard when installed keyboard layouts change. Bug 817508, r=karlt, sr=roc